v33 - Added who Liked display, generated more posts, fixed the gap between comments and share counts

--- a/src/Content/Home/MiddleContent/Post.scss
+++ b/src/Content/Home/MiddleContent/Post.scss
@@ -111,43 +111,57 @@
         }
 
         .like-share-display {
+            position: relative;
             display: flex;
             align-items: center;
+            gap: 1em;
 
             padding: 0.3em 0;
 
-            gap: 1em;
+            width: 100%;
+
+            .users-that-liked {
+                position: absolute;
+                top: 1.5em;
+
+                display: none;
+                flex-direction: column;
+                gap: 0.2em;
+
+                padding: 0.6em;
+                border-radius: 0.5em;
+
+                width: auto;
+
+                z-index: 100;
+
+                color: white;
+                background-color: rgb(60, 60, 60, 0.9);
+
+                &.active {
+                    display: flex;
+                }
+
+                .liked-user-display {
+                    display: flex;
+                    font-size: $xs-s;
+                }
 
             .post-likes {
                 display: flex;
 
-                .like-icons {
-
-                    position: relative;
-
-                    .users-that-liked {
-                        position: absolute;
-                        top: 1.5em;
-
-                        display: flex;
-                        flex-direction: column;
-                        gap: 0.2em;
-
-                        padding: 0.5em;
-                        border-radius: 0.5em;
-
-                        z-index: 1000;
-
-                        color: white;
-                        background-color: rgb(60, 60, 60, 0.9);
-                        
-
-                        .liked-user-display {
-                            font-size: $xs-s;
-                            width: 100%;
-                        }
-                    }
                 }
+
+                .like-icons {
+                    timeline-scope: none; //temp
+
+                }
+            }
+
+            .like-count {
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
 
             .count {
@@ -161,8 +175,13 @@
 
             .comment-and-share {
                 display: flex;
-
                 margin-left: auto;
+
+                .share-count {
+                    span:not(:empty) {
+                        margin-left: 1em;
+                    }
+                }
             }
         }
 
