--- a/src/Global/components/Accordion/Accordion.scss
+++ b/src/Global/components/Accordion/Accordion.scss
@@ -29,22 +29,21 @@
         cursor: pointer;
         order: 0;
 
-        svg {
-            height: 1.6em;
-            width: 1.6em;
-            margin-left: 0.15em;
-        }
-
         .icon-container {
-            position: absolute;
-            top: 0.5em;
-            left: 0.5em;
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
             background-color: rgba(128, 128, 128, 0.3);
             border-radius: 100%;
             height: 2em;
             width: 2em;
 
-            
+            svg {
+                height: 1.6em;
+                width: 1.6em;   
+            }
         }
     }
 
@@ -56,6 +55,12 @@
 
         &.reorder .top {
             order: 2;
+
+            .icon-container {
+                svg {
+                    transform: rotate(180deg);
+                }
+            }
         }
 
         &.reorder .accordion-container {
